syntax = "proto3";
package zetachain.zetacore.authority;

import "gogoproto/gogo.proto";

option go_package = "github.com/zeta-chain/zetacore/x/authority/types";

// PolicyType defines the type of policy
enum PolicyType {
  option (gogoproto.goproto_enum_stringer) = true;
  groupEmergency =
      0; // Used for emergency situations that require immediate action
  groupOperational = 1; // Used for operational tasks like changing
                        // non-sensitive protocol parameters
  groupAdmin = 2;       // Used for administrative tasks like changing sensitive
                        // protocol parameters or moving funds
  emptyPolicyType = 3; // Used for empty policies, to represent a situation when
                       // the required policy does not exist
}

message Policy {
  PolicyType policy_type = 1;
  string address = 2;
}

// Policy contains info about authority policies
message Policies { repeated Policy items = 1; }
