syntax = "proto3";
package zetachain.zetacore.fungible;

import "gogoproto/gogo.proto";
import "zetachain/zetacore/pkg/coin/coin.proto";

option go_package = "github.com/zeta-chain/zetacore/x/fungible/types";

// Msg defines the Msg service.
service Msg {
  rpc DeploySystemContracts(MsgDeploySystemContracts)
      returns (MsgDeploySystemContractsResponse);
  rpc DeployFungibleCoinZRC20(MsgDeployFungibleCoinZRC20)
      returns (MsgDeployFungibleCoinZRC20Response);
  rpc RemoveForeignCoin(MsgRemoveForeignCoin)
      returns (MsgRemoveForeignCoinResponse);
  rpc UpdateSystemContract(MsgUpdateSystemContract)
      returns (MsgUpdateSystemContractResponse);
  rpc UpdateContractBytecode(MsgUpdateContractBytecode)
      returns (MsgUpdateContractBytecodeResponse);
  rpc UpdateZRC20WithdrawFee(MsgUpdateZRC20WithdrawFee)
      returns (MsgUpdateZRC20WithdrawFeeResponse);
  rpc PauseZRC20(MsgPauseZRC20) returns (MsgPauseZRC20Response);
  rpc UnpauseZRC20(MsgUnpauseZRC20) returns (MsgUnpauseZRC20Response);
  rpc UpdateZRC20LiquidityCap(MsgUpdateZRC20LiquidityCap)
      returns (MsgUpdateZRC20LiquidityCapResponse);
}

message MsgDeploySystemContracts { string creator = 1; }

message MsgDeploySystemContractsResponse {
  string uniswapV2Factory = 1;
  string wzeta = 2;
  string uniswapV2Router = 3;
  string connectorZEVM = 4;
  string systemContract = 5;
}

message MsgUpdateZRC20WithdrawFee {
  string creator = 1;
  string zrc20_address = 2; // zrc20 address
  string new_withdraw_fee = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
  string new_gas_limit = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
}

message MsgUpdateZRC20WithdrawFeeResponse {}

message MsgUpdateSystemContract {
  string creator = 1;
  string new_system_contract_address = 2;
}

message MsgUpdateSystemContractResponse {}

message MsgDeployFungibleCoinZRC20 {
  string creator = 1;
  string ERC20 = 2;
  int64 foreign_chain_id = 3;
  uint32 decimals = 4;
  string name = 5;
  string symbol = 6;
  pkg.coin.CoinType coin_type = 7;
  int64 gas_limit = 8;
}

message MsgDeployFungibleCoinZRC20Response { string address = 1; }

message MsgRemoveForeignCoin {
  string creator = 1;
  string name = 2;
}

message MsgRemoveForeignCoinResponse {}

message MsgUpdateContractBytecode {
  string creator = 1;
  string contract_address = 2;
  string new_code_hash = 3;
}

message MsgUpdateContractBytecodeResponse {}

message MsgPauseZRC20 {
  string creator = 1;
  repeated string zrc20_addresses = 2;
}

message MsgPauseZRC20Response {}

message MsgUnpauseZRC20 {
  string creator = 1;
  repeated string zrc20_addresses = 2;
}

message MsgUnpauseZRC20Response {}

message MsgUpdateZRC20LiquidityCap {
  string creator = 1;
  string zrc20_address = 2;
  string liquidity_cap = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
}

message MsgUpdateZRC20LiquidityCapResponse {}
